--- a/dashboard/static/css/about/about.css
+++ b/dashboard/static/css/about/about.css
@@ -1,9 +1,169 @@
+.dashboard {
+    width: 100%;
+    height: 100%;
+}
+
 .about_section {
     display: flex;
     align-items: center;
-    justify-content: space-around;
 }
 
-.about_editable {
+/* Left ////////////////////////////////////////////////////////////////////////////////*/
+.current_about_container {
+    width: 58%;
+    height: 100%;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.current_about_position {
+    width: 90%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.current_about {
+    width: 100%;
+    height: 92%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    overflow: scroll;
+    background-color: #f5f5f5;
+    background-position: center;
+    box-shadow: inset 1px 1px 25px 0px rgba(0, 0, 0, 0.25);
+}
+
+.current_about::-webkit-scrollbar{
+    display: none;
+}
+
+.current_about_form {
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+.about_skills {
+    font-size: 30px;
+    color: #333333;
+}
+
+.categorys {
+    width: 100%;
+    margin-top: 10px;
+    padding-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+}
+
+.categorys button {
+    width: 50px;
+    height: 20px;
+    border-radius: 5px;
+}
+
+.edit_delete_button {
+    width: 120px;
+    opacity: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.category{
+    padding-left: 10px;
+    transition: background-color 0.1s ease-in-out;
+}
+
+.category:hover {
+    background-color: #e6e6e6;
+}
+
+.main_category, .sub_category, .skill {
+    cursor: pointer;
+}
+
+.main_category {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 20px;
+    color: #333333;
+}
+
+.sub_category {
+    margin-top: 10px;
+    margin-left: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 18px;
+    color: #333333;
+}
+
+.skill {
+    margin-top: 5px;
+    margin-left: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+    color: #333333;
+}
+
+.add_button {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.add_button button {
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+}
+
+/* Right ////////////////////////////////////////////////////////////////////////////////*/
+.edit_contaner {
+    width: 42%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.create_about_container, .edit_main_category_contaner {
+    width: 90%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: left;
+}
+
+.create_about_container {
+    display: none;
+}
+
+.completion {
+    display: none;
+}
+
+.completion.active {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
