--- a/dashboard/templates/dashboard/about/about.html
+++ b/dashboard/templates/dashboard/about/about.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 {% block head %}
-    <link rel="stylesheet" href="{% static 'css/about/about.css' %}">
+    <link rel="stylesheet" href="{% static 'css/dashboard/about/about.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -97,5 +97,5 @@
         </div>
     </div>
 </section>
-<script src="{% static 'js/about/about.js' %}"></script>
+<script src="{% static 'js/dashboard/about/about.js' %}"></script>
 {% endblock %}
