--- a/dashboard/templates/admin_base.html
+++ b/dashboard/templates/admin_base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Machida Hayato{% endblock %}</title>
+    <title>Machida Hayato Dashboard - {% block title %}{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/admin_base.css' %}">
     {% block head %}{% endblock %}
